[gd_scene load_steps=4 format=1]

[ext_resource path="res://Kontroloj/Cxefa_menuo.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Muzikoj/horora_atmosfero.ogg" type="AudioStream" id=3]

[node name="Panel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = -3.0
margin/right = 1025.0
margin/bottom = 640.0
script/script = ExtResource( 1 )

[node name="Ludi" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 254.5
margin/top = 236.5
margin/right = -257.5
margin/bottom = 153.5
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ludi"
flat = false

[node name="Agordoj" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 254.5
margin/top = 108.5
margin/right = -257.5
margin/bottom = 25.5
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Agordoj"
flat = false

[node name="Pri" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 254.5
margin/top = -19.5
margin/right = -257.5
margin/bottom = -102.5
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pri"
flat = false

[node name="Eliri" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 254.5
margin/top = -147.5
margin/right = -257.5
margin/bottom = -230.5
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Eliri"
flat = false

[node name="Muziko_horora_atmosfero" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Ludi" to="." method="_on_Ludi_pressed"]

[connection signal="pressed" from="Agordoj" to="." method="_on_Agordoj_pressed"]

[connection signal="pressed" from="Eliri" to="." method="_on_Eliri_pressed"]


